--- a/examples/2-transform-dummies/Cargo.toml
+++ b/examples/2-transform-dummies/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+polars = { version = "0.38.3", features = ["lazy", "strings", "regex", "to_dummies"] }
