Added: Include a validation function to check schema
This change includes new functionality to check the data frame schema
against a schema.toml file which contains a list of column names.

Signed-off-by: Toure Dunnon <tdunnon@gmail.com>

--- a/examples/1-extract/Cargo.toml
+++ b/examples/1-extract/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 polars = { version = "0.38.3", features = ["lazy", "strings", "regex"] }
+toml = "0.8.12"
+serde = { version = "1.0", features = ["derive"] }
